# zspykee

flumotion-spykee/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  env.in  flumotion-spykee.spec.in
flumotion-spykee/conf/: planet.xml  template.xml
flumotion-spykee/flumotion/component/: Makefile.am
flumotion-spykee/flumotion/component/spykee/: Makefile.am  admin_gtk.py  gstreamer.py  spykee.glade  spykee.py  spykee.xml  spykeechecks.py  twistedprotocol.py  wizard.glade  wizard_gtk.py
flumotion-spykee/flumotion/project/: Makefile.am
flumotion-spykee/flumotion/test/: Makefile.am  setup.py.in  test_sample_common.py
flumotion-spykee/misc/: setup.py.in
flumotion-spykee/po/: fr.po  nl.po
zspykee/: app.py  gstreamer.py  setup.py  spykee.glade  twistedprotocol.py
zspykee/zspykee/: app.py
zspykee/zspykee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
